# TDT4200-Project-2

./: .gitattributes  CMakeLists.txt  Makefile  README.md
input/: audir8.mtl  camaro.mtl  plant.mtl
mpitest/: mpitest
src/: main.cpp  rasteriser.cpp  rasteriser.hpp
src/utilities/: geometry.cpp
utils/: gprof2svg
